--- a/android/CantonBus/AndroidManifest.xml
+++ b/android/CantonBus/AndroidManifest.xml
@@ -5,7 +5,6 @@
       android:versionName="1.0">
     <uses-sdk android:minSdkVersion="15" />
     <uses-permission android:name="android.permission.INTERNET" />
-    
     <application android:icon="@drawable/ic_launcher" android:label="广州实时公交">
         <activity android:name="MainActivity"
                   android:label="广州实时公交">
@@ -16,6 +15,12 @@
         </activity>
         <activity android:name="StationActivity"
                   android:label="车站信息">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
+        </activity>
+        <activity android:name="RouteActivity"
+                  android:label="线路信息">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
