--- a/android/CantonBus/AndroidManifest.xml
+++ b/android/CantonBus/AndroidManifest.xml
@@ -25,5 +25,11 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="MainActivity" />
         </activity>
+        <activity android:name="BookmarkListActivity"
+                  android:label="收藏夹">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="MainActivity" />
+        </activity>
     </application>
 </manifest>
